--- a/.github/workflows/run-obs.yml
+++ b/.github/workflows/run-obs.yml
@@ -7,6 +7,10 @@ on:
         description: "Package to update (dms, dms-git, or all)"
         required: false
         default: "all"
+      tag_version:
+        description: "Specific tag version for dms stable (e.g., v1.0.2). Leave empty to auto-detect latest release."
+        required: false
+        default: ""
       rebuild_release:
         description: "Release number for rebuilds (e.g., 2, 3, 4 to increment spec Release)"
         required: false
@@ -161,16 +165,51 @@ jobs:
         id: packages
         run: |
           if [[ "${{ github.event_name }}" == "push" && "${{ github.ref }}" =~ ^refs/tags/ ]]; then
+            # Tag push event - use the pushed tag
             echo "packages=dms" >> $GITHUB_OUTPUT
             VERSION="${GITHUB_REF#refs/tags/}"
             echo "version=$VERSION" >> $GITHUB_OUTPUT
             echo "Triggered by tag: $VERSION"
           elif [[ "${{ github.event_name }}" == "schedule" ]]; then
+            # Scheduled run - dms-git only
             echo "packages=${{ needs.check-updates.outputs.packages }}" >> $GITHUB_OUTPUT
             echo "Triggered by schedule: updating git package"
           elif [[ -n "${{ github.event.inputs.package }}" ]]; then
-            # Use filtered packages from check-updates when package="all" and no rebuild requested
-            if [[ "${{ github.event.inputs.package }}" == "all" ]] && [[ -z "${{ github.event.inputs.rebuild_release }}" ]]; then
+            # Manual workflow dispatch
+
+            # Determine version for dms stable
+            if [[ "${{ github.event.inputs.package }}" == "dms" ]]; then
+              # For explicit dms selection, require tag_version
+              if [[ -n "${{ github.event.inputs.tag_version }}" ]]; then
+                VERSION="${{ github.event.inputs.tag_version }}"
+                echo "version=$VERSION" >> $GITHUB_OUTPUT
+                echo "Using specified tag: $VERSION"
+              else
+                echo "ERROR: tag_version is required when package=dms"
+                echo "Please specify a tag version (e.g., v1.0.2) or use package=all for auto-detection"
+                exit 1
+              fi
+            elif [[ "${{ github.event.inputs.package }}" == "all" ]]; then
+              # For "all", auto-detect if tag_version not specified
+              if [[ -n "${{ github.event.inputs.tag_version }}" ]]; then
+                VERSION="${{ github.event.inputs.tag_version }}"
+                echo "version=$VERSION" >> $GITHUB_OUTPUT
+                echo "Using specified tag: $VERSION"
+              else
+                # Auto-detect latest release for "all"
+                LATEST_TAG=$(curl -s https://api.github.com/repos/AvengeMedia/DankMaterialShell/releases/latest | grep '"tag_name"' | sed 's/.*"tag_name": "\([^"]*\)".*/\1/' || echo "")
+                if [[ -n "$LATEST_TAG" ]]; then
+                  echo "version=$LATEST_TAG" >> $GITHUB_OUTPUT
+                  echo "Auto-detected latest release: $LATEST_TAG"
+                else
+                  echo "ERROR: Could not auto-detect latest release"
+                  exit 1
+                fi
+              fi
+            fi
+
+            # Use filtered packages from check-updates when package="all" and no rebuild/tag specified
+            if [[ "${{ github.event.inputs.package }}" == "all" ]] && [[ -z "${{ github.event.inputs.rebuild_release }}" ]] && [[ -z "${{ github.event.inputs.tag_version }}" ]]; then
               echo "packages=${{ needs.check-updates.outputs.packages }}" >> $GITHUB_OUTPUT
               echo "Manual trigger: all (filtered to: ${{ needs.check-updates.outputs.packages }})"
             else
@@ -186,7 +225,7 @@ jobs:
         run: |
           COMMIT_HASH=$(git rev-parse --short=8 HEAD)
           COMMIT_COUNT=$(git rev-list --count HEAD)
-          BASE_VERSION=$(grep -oP '^Version:\s+\K[0-9.]+' distro/opensuse/dms.spec | head -1 || echo "0.6.2")
+          BASE_VERSION=$(grep -oP '^Version:\s+\K[0-9.]+' distro/opensuse/dms.spec | head -1 || echo "1.0.2")
           NEW_VERSION="${BASE_VERSION}+git${COMMIT_COUNT}.${COMMIT_HASH}"
           echo "📦 Updating dms-git.spec to version: $NEW_VERSION"
 
@@ -207,7 +246,7 @@ jobs:
         run: |
           COMMIT_HASH=$(git rev-parse --short=8 HEAD)
           COMMIT_COUNT=$(git rev-list --count HEAD)
-          BASE_VERSION=$(grep -oP '^Version:\s+\K[0-9.]+' distro/opensuse/dms.spec | head -1 || echo "0.6.2")
+          BASE_VERSION=$(grep -oP '^Version:\s+\K[0-9.]+' distro/opensuse/dms.spec | head -1 || echo "1.0.2")
           NEW_VERSION="${BASE_VERSION}+git${COMMIT_COUNT}.${COMMIT_HASH}"
           echo "📦 Updating Debian dms-git changelog to version: $NEW_VERSION"
 
