--- a/.github/workflows/run-obs.yml
+++ b/.github/workflows/run-obs.yml
@@ -18,6 +18,8 @@ on:
   push:
     tags:
       - "v*"
+    branches:
+      - master
   schedule:
     - cron: "0 */3 * * *" # Every 3 hours for dms-git builds
 
@@ -265,9 +267,14 @@ jobs:
         run: |
           VERSION="${{ steps.packages.outputs.version }}"
           VERSION_NO_V="${VERSION#v}"
-          echo "Updating packaging to version $VERSION_NO_V"
+          echo "==> Updating packaging files to version: $VERSION_NO_V"
 
+          # Update spec file
           sed -i "s/^Version:.*/Version:        $VERSION_NO_V/" distro/opensuse/dms.spec
+
+          # Verify the update
+          UPDATED_VERSION=$(grep -oP '^Version:\s+\K[0-9.]+' distro/opensuse/dms.spec | head -1)
+          echo "✓ Spec file now shows Version: $UPDATED_VERSION"
 
           # Single changelog entry (full history on OBS website)
           DATE_STR=$(date "+%a %b %d %Y")
@@ -328,6 +335,7 @@ jobs:
       - name: Upload to OBS
         env:
           REBUILD_RELEASE: ${{ github.event.inputs.rebuild_release }}
+          TAG_VERSION: ${{ steps.packages.outputs.version }}
         run: |
           PACKAGES="${{ steps.packages.outputs.packages }}"
 
@@ -339,6 +347,7 @@ jobs:
           MESSAGE="Automated update from GitHub Actions"
           if [[ -n "${{ steps.packages.outputs.version }}" ]]; then
             MESSAGE="Update to ${{ steps.packages.outputs.version }}"
+            echo "==> Version being uploaded: ${{ steps.packages.outputs.version }}"
           fi
 
           # PACKAGES can be space-separated list (e.g., "dms-git dms" from "all" check)
