--- a/distro/ubuntu/dms/debian/control
+++ b/distro/ubuntu/dms/debian/control
@@ -11,7 +11,7 @@ Vcs-Git: https://github.com/AvengeMedia/DankMaterialShell.git
 Package: dms
 Architecture: amd64
 Depends: ${misc:Depends},
-         quickshell-git | quickshell,
+         quickshell | quickshell-git,
          accountsservice,
          cava,
          cliphist,
