--- a/quickshell/matugen/templates/kitty-tabs.conf
+++ b/quickshell/matugen/templates/kitty-tabs.conf
@@ -9,8 +9,8 @@ tab_bar_margin_color    {{colors.background.default.hex}}
 
 tab_bar_background              {{colors.background.default.hex}}
 
-active_tab_foreground           {{colors.on_primary_container.default.hex}}
-active_tab_background           {{colors.primary_container.default.hex}}
+active_tab_foreground           {{colors.on_primary.default.hex}}
+active_tab_background           {{colors.primary.default.hex}}
 active_tab_font_style           bold
 
 inactive_tab_foreground         {{colors.on_surface_variant.default.hex}}
