--- a/quickshell/matugen/configs/equibop.toml
+++ b/quickshell/matugen/configs/equibop.toml
@@ -1,3 +1,3 @@
-[templates.dmsvesktop]
+[templates.dmsequibop]
 input_path = 'SHELL_DIR/matugen/templates/vesktop.css'
 output_path = '~/.config/equibop/themes/dank-discord.css'
