--- a/core/internal/config/embedded/hyprland.conf
+++ b/core/internal/config/embedded/hyprland.conf
@@ -150,6 +150,10 @@ bindel = , XF86AudioRaiseVolume, exec, dms ipc call audio increment 3
 bindel = , XF86AudioLowerVolume, exec, dms ipc call audio decrement 3
 bindl = , XF86AudioMute, exec, dms ipc call audio mute
 bindl = , XF86AudioMicMute, exec, dms ipc call audio micmute
+bindl = , XF86AudioPause, exec, dms ipc call mpris playPause
+bindl = , XF86AudioPlay, exec, dms ipc call mpris playPause
+bindl = , XF86AudioPrev, exec, dms ipc call mpris previous
+bindl = , XF86AudioNext, exec, dms ipc call mpris next
 
 # === Brightness Controls ===
 bindel = , XF86MonBrightnessUp, exec, dms ipc call brightness increment 5 ""
