cursor: hypr, mango, and dankinstall support for configs

--- a/core/internal/config/embedded/hyprland.conf
+++ b/core/internal/config/embedded/hyprland.conf
@@ -275,3 +275,4 @@ bind = $mod SHIFT, P, dpms, toggle
 source = ./dms/colors.conf
 source = ./dms/outputs.conf
 source = ./dms/layout.conf
+source = ./dms/cursor.conf
