keybinds: initial support for writable hyprland and mangoWC fixes #1204

--- a/core/internal/config/embedded/hyprland.conf
+++ b/core/internal/config/embedded/hyprland.conf
@@ -106,8 +106,8 @@ windowrule = float on, match:class ^(firefox)$, match:title ^(Picture-in-Picture
 windowrule = float on, match:class ^(zoom)$
 
 # DMS windows floating by default
-windowrule = float on, match:class ^(org.quickshell)$
-windowrule = opacity 0.9 0.9, match:float false, match:focus false
+# ! Hyprland doesnt size these windows correctly so disabling by default here
+# windowrule = float on, match:class ^(org.quickshell)$
 
 layerrule = no_anim on, match:namespace ^(quickshell)$
 
