--- a/core/internal/config/embedded/hyprland.conf
+++ b/core/internal/config/embedded/hyprland.conf
@@ -106,7 +106,7 @@ windowrule = float on, match:class ^(firefox)$, match:title ^(Picture-in-Picture
 windowrule = float on, match:class ^(zoom)$
 
 # DMS windows floating by default
-# ! Hyprland doesnt size these windows correctly so disabling by default here
+# ! Hyprland doesn't size these windows correctly so disabling by default here
 # windowrule = float on, match:class ^(org.quickshell)$
 
 layerrule = no_anim on, match:namespace ^(quickshell)$
